# ai-video-package

./: .gitignore  Cargo.toml  README.md  SKILL.md
references/: background.md  character.md  enemy.md  keycut-image.md  storyboard.md  video-cut.md
rules/: video_prompt.json
src/: main.rs
src/asset/: mod.rs
src/cut/: mod.rs
src/git/: mod.rs
src/project/: mod.rs
src/prompt/: mod.rs
src/skill/: mod.rs
src/tui/: mod.rs
